Was able to fix the overflow

--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ html,body{
     width: 100%;
 }
 
-
 .flex-wrapper {
     display: flex;
     align-items: center;
@@ -20,14 +19,16 @@ html,body{
     height: 100%;
 }
 
-
-section{
-    height: 100%;   
-    display: flex;
+#section1{
+    height: 100%;
+    padding-top: 20px; 
+    padding-bottom: 15px;
 }
 
 #section2{
     background-color: #B8E0D2;
+    padding-top: 20px; 
+    padding-bottom: 15px;
 }
 
 .portfolio-card{
@@ -35,6 +36,10 @@ section{
     padding-bottom: 15px;
 }
 
-.portfolio-card p{
-    justify-content: center;
+.footer{
+    background-color: #FFFD74;
+    padding: .5%;
+}
+.footer h1{
+    color: navy;
 }
